kqed_dev4/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Account Manager who are responsible for contact and household relationships for Annual Giving/Foundations/Planned Giving/Underwriting/Trustee &amp; Overseer Relations/Events/Development</description>
        <inlineHelpText>Account Manager who are responsible for contact and household relationships for Annual Giving/Foundations/Planned Giving/Underwriting/Trustee &amp; Overseer Relations/Events/Development</inlineHelpText>
        <label>Account Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Davi Axinn Levine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abby Ballou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jessica Connolly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaja Fickes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellen Frank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathleen McCarthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanmarie Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susanne Salerno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanya Tulenko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Lenihan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Acknowled__c</fullName>
        <description>from classifications</description>
        <label>Acknowledgements</label>
        <picklist>
            <picklistValues>
                <fullName>No Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No On Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Matching Gift</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Acquired_Date__c</fullName>
        <inlineHelpText>Column: ACQUIRED DATE. Added for early Major Gifts import.</inlineHelpText>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affili__c</fullName>
        <description>this is from the classification object</description>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>KQED FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy KTEH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AlternateEmail__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Annual_Giving_Level__c</fullName>
        <inlineHelpText>If the combined household does not give you could select an individual giving level if it is applicable.</inlineHelpText>
        <label>Annual Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>KQED Student/Senior Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Leadership Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Signal Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Producer&apos;s Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Basic Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Major Donors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ano_t_Att__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <label>Anonymous through Attorney/Third Party?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <inlineHelpText>Email of the contacts assistant</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <description>Day of the month the member/contact was born</description>
        <inlineHelpText>Day of the month the Household member/contact was both use 01 for the first day of the month</inlineHelpText>
        <label>Birth Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <description>Month of the Birth</description>
        <inlineHelpText>Enter the Month as 01 for Jan or 02 for Feb</inlineHelpText>
        <label>Birth Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>Year of birth YYYY for example 1990</description>
        <inlineHelpText>Year of birth YYYY; for example 1990</inlineHelpText>
        <label>Birth Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Name__c</fullName>
        <label>Brief Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Email__c</fullName>
        <label>Campaign Email</label>
        <picklist>
            <picklistValues>
                <fullName>No Add Gift Email Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Lapsed Email Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Special Email Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sweep/Raffle Email Appeals</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box indicates that this is a child in the household.</description>
        <inlineHelpText>The check box indicates that this is a child in the household.</inlineHelpText>
        <label>Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>type of contact on the household,</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Partner Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Web_Site__c</fullName>
        <inlineHelpText>URL for the contacts personal or business web site.</inlineHelpText>
        <label>Contact Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Corp_Support_Status__c</fullName>
        <label>Corp Support Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Curr_Mbr_Yr_Renew_Src__c</fullName>
        <inlineHelpText>Column: CURRENT MEMBER YEAR RENEWAL SOURCE. Added for early Major Gifts import.</inlineHelpText>
        <label>Curr Mbr Yr Renew Src</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Activity__c</fullName>
        <inlineHelpText>Column: CURRENT ACTIVITY (ACCOUNT ACTIVITIES). Added for early Major Gifts import.</inlineHelpText>
        <label>Current Activity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mbr_Yr_Pledge_Amt__c</fullName>
        <inlineHelpText>Column: CURRENT MEMBER YEAR PLEDGE AMOUNT. Added for early Major Gifts import.</inlineHelpText>
        <label>Current Mbr Yr Pledge Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DP_Bulk_Mail_Batch_Date__c</fullName>
        <description>Used for Drive Premiums</description>
        <inlineHelpText>What is the date for the Bulk letter send?</inlineHelpText>
        <label>DP Bulk Mail Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <picklist>
            <picklistValues>
                <fullName>Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_No_Exc__c</fullName>
        <formula>IF (Account.Do_Not_Ex__c  = TRUE, &quot;Checked&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Exchange Name/Address?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please do not mail anything to this contact</inlineHelpText>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Newsletter__c</fullName>
        <description>from classifications</description>
        <label>E- Newsletter</label>
        <picklist>
            <picklistValues>
                <fullName>No Email Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Qed Up/In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No E-One Touch</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_Address_for_Major_Gift_Use__c</fullName>
        <description>Email address for Major Gift officer use only, not to be used by Marketing or Development Groups</description>
        <inlineHelpText>Email address for Major Gift officer use only, not to be used by Marketing or Development Groups</inlineHelpText>
        <label>Email Address for Major Gift Use</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egyptian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haitain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Heritage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Column: EXPIRATION DATE (ACCOUNT ACTIVITIES). Added for early Major Gifts data import.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <inlineHelpText>What is the web address of their Facebook profile or page?</inlineHelpText>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Gift_Date__c</fullName>
        <inlineHelpText>Column: FIRST GIFT DATE. Added for early Major Gifts import.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_contacted__c</fullName>
        <label>Days since contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_created__c</fullName>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_HouseholdMailingAddress__c</fullName>
        <formula>Account_Household__r.Formula_MailingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_HouseholdPhone__c</fullName>
        <formula>Account_Household__r.Household_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GDJP_Air_Date__c</fullName>
        <inlineHelpText>When does this show air?</inlineHelpText>
        <label>GDJP Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDJP_Report__c</fullName>
        <formula>HYPERLINK(&quot;/00OT00000019qx2&quot;, &quot;See Report&quot;, &quot;_blank&quot;)</formula>
        <inlineHelpText>Click to see the report of all invited Contacts.</inlineHelpText>
        <label>GDJP Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDJP_Status_Color__c</fullName>
        <formula>CASE( Guest_DJ_Proj_Status__c ,
&quot;Taped&quot;, IMAGE(&quot;https://c.cs0.content.force.com/servlet/servlet.ImageServer?id=015T00000003lGl&amp;oid=00DT0000000JZcA&amp;lastMod=1300205952000&quot;, &quot;Taped&quot;, 16, 16),
&quot;&quot;)</formula>
        <label>GDJP Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Level_Amt__c</fullName>
        <inlineHelpText>Column: GIVING LEVEL AMOUNT (ACCOUNT ACTIVITIES). Added for early Major Gifts import.</inlineHelpText>
        <label>Giving Level Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guest_DJ_Proj_Notes__c</fullName>
        <inlineHelpText>Any additional details such as what songs, etc. can go here.</inlineHelpText>
        <label>GDJP Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guest_DJ_Proj_Status__c</fullName>
        <inlineHelpText>If they have been invited to be a Guest DJ, where are they in the process?</inlineHelpText>
        <label>GDJP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTML_Enabled_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTML Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send Holiday Card?</inlineHelpText>
        <label>Holiday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeEmail__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HomeEmail_old__c</fullName>
        <label>Personal Email_old</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <formula>if(
  ISPICKVAL(Primary_Address_Type_old__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(Secondary_Address_Type_old__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account_Manager__c</fullName>
        <description>The contact&apos;s household&apos;s account manager</description>
        <formula>Account_Household__r.Account_Manager__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <inlineHelpText>What is the web address of their LinkedIn profile?</inlineHelpText>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mem_Type__c</fullName>
        <description>was part of the classification object</description>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>Microdonation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Text Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eMember</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Merge_Contact__c</fullName>
        <formula>HYPERLINK(&quot;/merge/conmergewizard.jsp?retURL=%2F&quot;&amp; AccountId &amp; &quot;&amp;id=&quot;&amp; AccountId &amp; &quot;&amp;srch=&quot; &amp; LastName , &quot;Merge Contacts&quot; , &quot;_BLANK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Info__c</fullName>
        <inlineHelpText>Is there a web address with more info on this Contact? This could be the Press Contact URL or an online bio page.</inlineHelpText>
        <label>More Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MySpace_URL__c</fullName>
        <inlineHelpText>What is the web address of their MySpace profile?</inlineHelpText>
        <label>MySpace URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nev_Dis_N__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <inlineHelpText>if checked, then never display the name on Communications</inlineHelpText>
        <label>Never Display Name?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <label>Newsletter</label>
        <picklist>
            <picklistValues>
                <fullName>No Mail &quot;Go Public&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mail &quot;One Touch&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mail &quot;Visions&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_Ack_o_G__c</fullName>
        <formula>IF (Account.No_Ac_o_G__c =TRUE,&quot;Checked&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Acknowledgement of Gifts?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_NCOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <inlineHelpText>if checked, then no NCOA</inlineHelpText>
        <label>No NCOA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_e_Gu_O__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <inlineHelpText>if checked then no e-Guide will be sent</inlineHelpText>
        <label>No e-Guide/ On Q?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_e_vites__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <inlineHelpText>If checked then no E-vites will be sent</inlineHelpText>
        <label>No E-vites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_Warning__c</fullName>
        <inlineHelpText>Are there any special notes or warnings related to this Contact?</inlineHelpText>
        <label>Note/Warning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_Email__c</fullName>
        <description>from the classifications</description>
        <label>Other Email</label>
        <picklist>
            <picklistValues>
                <fullName>No Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Planned Giving Appeals/Solicitations</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <formula>NULLVALUE(IF( Account.SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pager__c</fullName>
        <label>Pager #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Serial__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is the imported Serial_# from the people PressFile db.</inlineHelpText>
        <label>Person Serial #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phon_Pref__c</fullName>
        <label>Phone Preference</label>
        <picklist>
            <picklistValues>
                <fullName>No Appeals/Solicitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Capital Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Political__c</fullName>
        <label>Political</label>
        <picklist>
            <picklistValues>
                <fullName>Democrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unaffiliated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredPhone__c</fullName>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>